# Stochastic-Boltzmann-Machine

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
cmake/: macos_llvm.cmake
scripts/demo-SBM-CM-family/: SBM-CM-family.py  plot-results.ipynb  run-SBM-CM-family.sh
src/SBM/MonteCarlo/MCMC_PottsProf/: MonteCarlo_PottsProfMod.cpp  make_mcmc_PottsProf.sh  setup_mcmc_PottsProf.py
src/SBM/SBM_GD/: SBM_proteins.py
src/SBM/utils/: utils.py  utils_plot.py
